# BarnesHut

./: Cargo.toml  README.md
benches/: bench_octree_construction.rs
src/: lib.rs  octtree.rs
