[package]
name = "barnes_hut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "bench_octree_construction"
harness = false

[dependencies]
env_logger = "0.10"
log = "0.4"
pixels = "0.11.0"
ultraviolet = { version = "0.9.0", features = ["f64", "int"] }
winit = "0.27"
winit_input_helper = "0.13"
rayon = "1.6"
